Update Layers (MX_Device.h, linker scripts)

--- a/.ci/Layers/Default_GCC/Board.clayer.yml
+++ b/.ci/Layers/Default_GCC/Board.clayer.yml
@@ -1,6 +1,6 @@
 layer:
   type: Board
-  description: STM32H735G-DK board setup (GCC)
+  description: Default STM32H735G-DK board setup (GCC)
   for-board: STMicroelectronics::STM32H735G-DK
 
   generators:
