Add OVERVIEW.md and update README.md files.

--- a/.ci/Layers/Default_GCC/Board.clayer.yml
+++ b/.ci/Layers/Default_GCC/Board.clayer.yml
@@ -73,6 +73,7 @@ layer:
   groups:
     - group: Board
       files:
+        - file: ./README.md
         - file: ./STM32H735G-DK.h
         - file: ./retarget_stdio.c
 
