--- a/Layers/Default/Board.clayer.yml
+++ b/Layers/Default/Board.clayer.yml
@@ -1,6 +1,6 @@
 layer:
   type: Board
-  description: STM32H735G-DK board setup
+  description: Default STM32H735G-DK board setup
   for-board: STMicroelectronics::STM32H735G-DK
 
   generators:
@@ -16,9 +16,9 @@ layer:
         - CMSIS_MCI
         - CMSIS_USB_Device
         - CMSIS_VIO
-        - ARDUINO_UNO_UART
-        - ARDUINO_UNO_SPI
         - ARDUINO_UNO_I2C
+        - ARDUINO_UNO_SPI
+        - ARDUINO_UNO_UART
         - ARDUINO_UNO_D2
         - ARDUINO_UNO_D3
         - ARDUINO_UNO_D4
@@ -37,7 +37,7 @@ layer:
         - STDIN
         - STDOUT
         - STDERR
-        - Heap: 1024
+        - Heap: 65536
 
   define:
     - CMSIS_target_header: \"STM32H735G-DK.h\"
@@ -49,11 +49,6 @@ layer:
     - pack: ARM::CMSIS-Compiler@>=2.0.0-0
     - pack: ARM::CMSIS-Driver@>=2.8.0-0
     - pack: ARM::CMSIS-Driver_STM32@>=1.0.0-0
-
-  misc:
-    - for-compiler: AC6
-      Link:
-        - '--diag_suppress 6329'
 
   components:
     - component: Device:CubeMX
@@ -78,6 +73,7 @@ layer:
   groups:
     - group: Board
       files:
+        - file: ./README.md
         - file: ./STM32H735G-DK.h
         - file: ./retarget_stdio.c
 
